Changed some more funny characters to their HTML code equivalent

--- a/ButtGastbLzn.htm
+++ b/ButtGastbLzn.htm
@@ -9,7 +9,7 @@
 //
 // Licensed Materials - Property of IBM
 // 5639-L89, 11K8359
-// (C) Copyright IBM Corp. 1995, 2000  All Rights Reserved.
+// &copy; Copyright IBM Corp. 1995, 2000  All Rights Reserved.
 //
 // Version: 5.0.0
 //
