--- a/Graankorrel/navigatie.html
+++ b/Graankorrel/navigatie.html
@@ -150,7 +150,7 @@ A:HOVER {text-decoration: underline;}
 <p align="left"><font color="#800000">
 <a target="_top" href="/gd/pelgrimc/parC-tak.htm">
 <strong style="font-weight: 400">
-<font color="#FFFFFF" face="Verdana" size="2">(C)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
+<font color="#FFFFFF" face="Verdana" size="2">&copy;-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         BESSELING(K)</font></a></font></p>
 
       </td>
