--- a/Graankorrel/navigatie2.html
+++ b/Graankorrel/navigatie2.html
@@ -14,7 +14,7 @@ A:HOVER {text-decoration: underline;}
 //
 // Licensed Materials - Property of IBM
 // 5639-L89, 11K8359
-// (C) Copyright IBM Corp. 1995, 2000  All Rights Reserved.
+// &copy; Copyright IBM Corp. 1995, 2000  All Rights Reserved.
 //
 // Version: 5.0.0
 //
@@ -171,7 +171,7 @@ onmouseover="HpbImgSwap('_HPB_ROLLOVER3','img/buttAtmQ_m_image.jpg');">
         M&uuml;LLER</font></a></p>
 
 <p align="center"><a href="Par375FamCC.htm"
-        target="hoofdframe"><strong><font color="#800000" size="1">(C)-</font></strong><font color="#800000" size="1">Pelgrim<br>
+        target="hoofdframe"><strong><font color="#800000" size="1">&copy;-</font></strong><font color="#800000" size="1">Pelgrim<br>
         BESSELING(K)</font></a></p>
 
 <p align="center"><a href="Par34famD.htm"
