--- a/hoofdpagina.html
+++ b/hoofdpagina.html
@@ -56,7 +56,7 @@ A:HOVER {text-decoration: underline;}
  de JONG en meer...!</font></p>
         <p align="left"><font color="#000000" face="Verdana" size="2">Op deze site zijn veel genealogische
         gegevens beschikbaar
-        (strikt privé, niet voor commerciële doeleinden). Ook zijn er oude (familie-)foto's te vinden,
+        (strikt priv&eacute;, niet voor commerci&euml;le doeleinden). Ook zijn er oude (familie-)foto's te vinden,
         iets over glasblazers, over Bad Sachsa-Duitsland,
         verder iets over kunst en,
         alleen voor de echte kenners, iets
@@ -91,7 +91,7 @@ A:HOVER {text-decoration: underline;}
                 <font color="#800000">Vraagje aan Fam.leden PILGRAM</font></a><a target="_top" href="/gd/pelgrime/parE-tak.htm"><font color="#800000"> </font></a></font><br>
         <font color="#800000" face="Verdana" size="2">&nbsp;<a target="_top" href="/gd/pelgrimf/par-Ftak.htm"><font color="#800000">2) 
                 </font></a><a target="_top" href="/gd/pelgrime/parE-tak.htm"><font color="#800000">E-tak bijgewerkt(waarin gegevens
-                  Hans Hermann Büdding Dld)</font></a><a target="_top" href="/gd/pelgrimf/par-Ftak.htm"><font color="#800000"> </font></a></font><br>
+                  Hans Hermann B&uuml;dding Dld)</font></a><a target="_top" href="/gd/pelgrimf/par-Ftak.htm"><font color="#800000"> </font></a></font><br>
         <font face="Verdana" size="2" color="#800000">&nbsp;<a target="_blank" href="http://www.berghapedia.nl/index.php/Pelgrim,_Pelgrom_en_Pelgrum"><font color="#800000">3) 
                 Pelgrim-Pelgrom-Pelgrum (site van Tonny Thuijs)</font></a></font><br>
         <font face="Verdana" size="2"><font color="#800000">&nbsp;</font><a href="http://www.sagen.at/texte/sagen/oesterreich/wien/stephanskirche/meisterpilgram.html" target="_blank"><font color="#800000">4) 
@@ -102,7 +102,7 @@ A:HOVER {text-decoration: underline;}
                     &amp; Voorouders uit Duitsland(Klaus Kunze)</font></a></font><br>
                 <a href="Antonin.htm">
                 <font color="#800000" face="verdana" size="2">&nbsp;6) Antonin
-                    Pilgram (Tsjechië)</font></a><br>
+                    Pilgram (Tsjechi&euml;)</font></a><br>
                 <a href="WaarheenPelgrim.htm">
                 <font size="2" color="#800000" face="Verdana">&nbsp;7) Waarheen
                     Pelgrims. Genealoog en 'Oude schrijvers?'</font></a><font size="2" color="#800000" face="Verdana">
@@ -145,7 +145,7 @@ A:HOVER {text-decoration: underline;}
         <b>
         <font face="Verdana" size="2" color="#800000">
         <a name="boven">
-        © 1990-2015 Jan Pelgrim, Hillegom, bijgewerkt 19 Januari 2015</a></font></b></p>
+        &copy; 1990-2015 Jan Pelgrim, Hillegom, bijgewerkt 19 Januari 2015</a></font></b></p>
         <a name="boven">
         </a>
         <div align="center">
