--- a/Judith-1.html
+++ b/Judith-1.html
@@ -14,7 +14,7 @@ A:HOVER {text-decoration: underline;}
 //
 // Licensed Materials - Property of IBM
 // 5639-L89, 11K8359
-// (C) Copyright IBM Corp. 1995, 2000  All Rights Reserved.
+// &copy; Copyright IBM Corp. 1995, 2000  All Rights Reserved.
 //
 // Version: 5.0.0
 //
