Replaced ï with &euml;

--- a/Bronnenpartbezit.htm
+++ b/Bronnenpartbezit.htm
@@ -608,7 +608,7 @@ mso-fareast-font-family:&quot;MS Mincho&quot;">, NG, Trouwen 1600-1677<o:p>
         wel&nbsp;een klein archiefje thuis, zoals je misschien al weet,&nbsp;waarmee
         ik velen al geholpen heb en nog kan helpen.</span></p>
         <p class="MsoNormal"><span lang="NL" style="font-family:Arial;color:black">Ooit
-        heb ik&nbsp;geïnventariseerd, dat is een half boekwerk, veel te veel om
+        heb ik&nbsp;ge&iuml;nventariseerd, dat is een half boekwerk, veel te veel om
         te vermelden .</span></p>
         <p class="MsoNormal"><span lang="NL" style="font-family:Arial;color:black">Toch
         zou ik mijn mogelijkheden om iets te doen voor de groep wel kenbaar
@@ -1064,7 +1064,7 @@ mso-fareast-language:NL">Beschikbare bronnen Monnickendam</span></p>
         <div>
           <font face="Arial">
           <div>
-            Vrijwel alle hierin vermelde gegevens zijn geïntegreerd&nbsp;opgenomen in 
+            Vrijwel alle hierin vermelde gegevens zijn ge&iuml;ntegreerd&nbsp;opgenomen in 
             de computer.&nbsp;</div>
           </font>
         </div>
