--- a/ChrGerKerk.htm
+++ b/ChrGerKerk.htm
@@ -47,7 +47,7 @@ Steenlegging Chr.Ger.Kerk te Schiedam!</font></h3>
         (04-11-1922).&nbsp;</font></p>
         <p class="MsoPlainText"><font face="Verdana">Hr. Mak nadien een
         vergroting gestuurd, wist zelf al een aantal namen te noemen en heeft
-        hier en daar verder geïnformeerd. Hr. Mak opgezocht te Vlaardingen, gaf
+        hier en daar verder ge&iuml;nformeerd. Hr. Mak opgezocht te Vlaardingen, gaf
         hij de volgende opsomming: (vanaf links)</font></p>
         <p class="MsoPlainText"><font face="Verdana">1&nbsp; 
         <font color="#000080">nu bekend: Mw. Krijgsman, </font>
