--- a/Leestekens.htm
+++ b/Leestekens.htm
@@ -124,7 +124,7 @@ yes"><br>
             <p class="MsoNormal"><span lang="NL" style="font-size:12.0pt;mso-bidi-font-size:
 10.0pt;font-family:Arial;mso-bidi-font-family:&quot;Times New Roman&quot;">í =<span style="mso-spacerun: yes">&nbsp;&nbsp;
             </span>0237<br>
-            ï =<span style="mso-spacerun: yes">&nbsp;&nbsp; </span>0239<br>
+            &iuml; =<span style="mso-spacerun: yes">&nbsp;&nbsp; </span>0239<br>
             ñ =<span style="mso-spacerun: yes">&nbsp; </span>0241<br>
             ò =<span style="mso-spacerun: yes">&nbsp; </span>0242<br>
             ó =<span style="mso-spacerun: yes">&nbsp; </span>0243<br>
