--- a/WaarheenPelgrim.htm
+++ b/WaarheenPelgrim.htm
@@ -289,7 +289,7 @@ Het werd onder andere teruggevonden in de catacomben.<br>
                     <td align="center" valign="bottom"
                     bgcolor="#FFFF80"><font color="#800000" face="Verdana" size="2"><b><a name="boven">5 <br>
                       zij
-                    kwetst niet, is niet egoïstisch en voelt
+                    kwetst niet, is niet ego&iuml;stisch en voelt
                     zich nooit beledigd; zij neemt niemand iets
                     kwalijk</a>;</b></font></td>
                 </tr>
