--- a/fotoalbum.htm
+++ b/fotoalbum.htm
@@ -39,7 +39,7 @@ pagina.</font></p>
 'Ochtendlicht.'</font></p>
 <p align="center">&nbsp;</p>
 <p align="center"><a href="img/HP8.jpg"><font face="Verdana" color="#800000"><img border="2" src="img/HP8_small.jpg" alt="HP8.jpg (50227 bytes)" width="100" height="64"></font></a></p>
-<p align="center"><font color="#800000" face="Verdana">Bloemenmozaïek, ingelegd door
+<p align="center"><font color="#800000" face="Verdana">Bloemenmoza&iuml;ek, ingelegd door
 Hillegomse jeugd.</font></p>
 <p align="center">&nbsp;</p>
 <p align="center"><a href="img/HP3.jpg"><font face="Verdana" color="#800000"><img border="2" src="img/HP3_small.jpg" alt="HP3.jpg (23001 bytes)" width="100" height="50"></font></a></p>
