--- a/fotoalbum2.htm
+++ b/fotoalbum2.htm
@@ -54,7 +54,7 @@ Foto genomen met enig tegenlicht.</font></p>
 'Ochtendlicht.'</font></p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
-<p align="center"><font color="#800000">Bloemenmozaïek, ingelegd door
+<p align="center"><font color="#800000">Bloemenmoza&iuml;ek, ingelegd door
 Hillegomse jeugd.</font></p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
