--- a/gd/DeJong/gd-hoofd.htm
+++ b/gd/DeJong/gd-hoofd.htm
@@ -444,7 +444,7 @@ Tr.(2)  15 september 1987 te Dordrecht,ZH <A NAME="ID349"></A><B>Marinus WIELHOU
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start="1">
 <LI><I>Noa Marise Lieve (Noa) PEETOOM</I><A NAME="ID1175"></A>, volgt <A HREF="#VII.29">VII.29</A>
-<LI><I>Mano Zoï Amoz (Mano) PEETOOM</I><A NAME="ID2114"></A>, volgt <A HREF="#VII.30">VII.30</A>
+<LI><I>Mano Zo&iuml; Amoz (Mano) PEETOOM</I><A NAME="ID2114"></A>, volgt <A HREF="#VII.30">VII.30</A>
 </OL>
 
 
@@ -568,7 +568,7 @@ Generatie VII
 
 <BR><B><A NAME="VII.29"></A> VII.29 Noa Marise Lieve (Noa) PEETOOM</B><A NAME="ID1175"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 16 mei 2004 te Harderwijk
 
-<BR><B><A NAME="VII.30"></A> VII.30 Mano Zoï Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
+<BR><B><A NAME="VII.30"></A> VII.30 Mano Zo&iuml; Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
 
 <BR><B><A NAME="VII.31"></A> VII.31 Marrigje Yvonne (Myrthe) de HAAN</B><A NAME="ID1139"></A> [<A HREF="#ID27">V</A>] [<A HREF="#ID1024">M</A>]. Geboren 2 januari 2003 te Den Haag
 
