--- a/gd/Meijvogel/gd-hoofd.htm
+++ b/gd/Meijvogel/gd-hoofd.htm
@@ -904,7 +904,7 @@ Durgerdam/Amsterdam.
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start="1">
 <LI><I>Noa Marise Lieve (Noa) PEETOOM</I><A NAME="ID1175"></A>, volgt <A HREF="#VII.21">VII.21</A>
-<LI><I>Mano Zoï Amoz (Mano) PEETOOM</I><A NAME="ID2114"></A>, volgt <A HREF="#VII.22">VII.22</A>
+<LI><I>Mano Zo&iuml; Amoz (Mano) PEETOOM</I><A NAME="ID2114"></A>, volgt <A HREF="#VII.22">VII.22</A>
 </OL>
 
 
@@ -1026,7 +1026,7 @@ Generatie VII
 
 <BR><B><A NAME="VII.21"></A> VII.21 Noa Marise Lieve (Noa) PEETOOM</B><A NAME="ID1175"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 16 mei 2004 te Harderwijk
 
-<BR><B><A NAME="VII.22"></A> VII.22 Mano Zoï Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
+<BR><B><A NAME="VII.22"></A> VII.22 Mano Zo&iuml; Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
 
 <BR><B><A NAME="VII.23"></A> VII.23 Marrigje Yvonne (Myrthe) de HAAN</B><A NAME="ID1139"></A> [<A HREF="#ID27">V</A>] [<A HREF="#ID1024">M</A>]. Geboren 2 januari 2003 te Den Haag
 
