--- a/gd/Meijvogel/gd-index.htm
+++ b/gd/Meijvogel/gd-index.htm
@@ -256,7 +256,7 @@
 <LI><A HREF="gd-hoofd.htm#ID1019" target="RD">Herman Gerrit</A>
 </UL>
 <B>PEETOOM</B><UL>
-<LI><A HREF="gd-hoofd.htm#ID2114" target="RD">Mano Zoï Amoz</A>
+<LI><A HREF="gd-hoofd.htm#ID2114" target="RD">Mano Zo&iuml; Amoz</A>
 <LI><A HREF="gd-hoofd.htm#ID1175" target="RD">Noa Marise Lieve</A>
 <LI><A HREF="gd-hoofd.htm#ID1025" target="RD">Rogier</A>
 </UL>
