--- a/gd/pelgrimf/gd-hoofd.htm
+++ b/gd/pelgrimf/gd-hoofd.htm
@@ -2559,7 +2559,7 @@ Samenwonend <A NAME="ID2776"></A><B>Gieta CHOENNIE</B>, geboren  april 1971 te S
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
 <LI><I>Noa Marise Lieve (Noa) PEETOOM</I><A NAME="ID1175"></A>, volgt <A HREF="#XIV.73">XIV.73</A>
-<LI><I>Mano Zoï Amoz (Mano) PEETOOM</I><A NAME="ID2114"></A>, volgt <A HREF="#XIV.74">XIV.74</A>
+<LI><I>Mano Zo&iuml; Amoz (Mano) PEETOOM</I><A NAME="ID2114"></A>, volgt <A HREF="#XIV.74">XIV.74</A>
 </OL>
 
 
@@ -2811,7 +2811,7 @@ Samenwonend met <A NAME="ID3234"></A><B>Bas de VOGEL</B>, geboren 13 februari 19
 
 <BR><B><A NAME="XIV.73"></A> XIV.73</B><B> Noa Marise Lieve (Noa) PEETOOM</B><A NAME="ID1175"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 16 mei 2004 te Harderwijk
 
-<BR><B><A NAME="XIV.74"></A> XIV.74</B><B> Mano Zoï Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
+<BR><B><A NAME="XIV.74"></A> XIV.74</B><B> Mano Zo&iuml; Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
 
 <BR><B><A NAME="XIV.75"></A> XIV.75</B><B> Marrigje Yvonne (Myrthe) de HAAN</B><A NAME="ID1139"></A> [<A HREF="#ID27">V</A>] [<A HREF="#ID1024">M</A>]. Geboren 2 januari 2003 te Den Haag
 
