--- a/hoofdpag4.html
+++ b/hoofdpag4.html
@@ -1814,7 +1814,7 @@ Netiquette Pagina</font>
                 <tr>
                   <td width="100%" height="21">
                   <a href="http://www.archeologienet.nl/index.htm" target="_blank">
-                  <font face="Verdana" size="2" color="#800000">Archeologienet:geïnteresseerden<br>
+                  <font face="Verdana" size="2" color="#800000">Archeologienet:ge&iuml;nteresseerden<br>
                   </font></a>
                   <font face="Verdana" size="2" color="#800000">
                   <a target="_top" name="boven589" href="http://www.cultuurwijs.nl/">
