--- a/hoofdpagina.html
+++ b/hoofdpagina.html
@@ -265,7 +265,7 @@ A:HOVER {text-decoration: underline;}
             <td width="149" height="16">
               <p align="center"><font size="2">
               <font color="#800000" face="Verdana">
-              <a href="KwartDan.htm"><font color="#800000">Daniël,Joppe,Floortje</font></a></font></a></font>
+              <a href="KwartDan.htm"><font color="#800000">Dani&euml;l,Joppe,Floortje</font></a></font></a></font>
             </td>
           </tr>
 <CENTER>
