--- a/img/fotoalbum.htm
+++ b/img/fotoalbum.htm
@@ -24,7 +24,7 @@ pagina.</font></p>
 'Ochtendlicht.'</font></p>
 <p align="center">&nbsp;</p>
 <p align="center"><a href="images/HP8.jpg"><img border="2" src="HP8_small.jpg" alt="HP8.jpg (50227 bytes)" width="100" height="64"></a></p>
-<p align="center"><font color="#800000">Bloemenmozaïek, ingelegd door
+<p align="center"><font color="#800000">Bloemenmoza&iuml;ek, ingelegd door
 Hillegomse jeugd.</font></p>
 <p align="center">&nbsp;</p>
 <p align="center"><a href="images/HP3.jpg"><img border="2" src="HP3_small.jpg" alt="HP3.jpg (23001 bytes)" width="100" height="50"></a></p>
