--- a/gd/DeJong/gd-index.htm
+++ b/gd/DeJong/gd-index.htm
@@ -143,7 +143,7 @@
 <LI><A HREF="gd-hoofd.htm#ID752" target="RD">Rob</A>
 </UL>
 <B>PEETOOM</B><UL>
-<LI><A HREF="gd-hoofd.htm#ID2114" target="RD">Mano Zoï Amoz</A>
+<LI><A HREF="gd-hoofd.htm#ID2114" target="RD">Mano Zo&iuml; Amoz</A>
 <LI><A HREF="gd-hoofd.htm#ID1175" target="RD">Noa Marise Lieve</A>
 <LI><A HREF="gd-hoofd.htm#ID1025" target="RD">Rogier</A>
 </UL>
