--- a/gd/pelgrimf/gd-hoofd-oudeversie.htm
+++ b/gd/pelgrimf/gd-hoofd-oudeversie.htm
@@ -2281,7 +2281,7 @@ Tr.(2)  15 september 1987 te Dordrecht,ZH <A NAME="ID349"></A><B>Marinus WIELHOU
 <BR><I>Uit dit huwelijk:</I>
 <OL type="a" start="1">
 <LI><I>Noa Marise Lieve (Noa)</I><A NAME="ID1175"></A>, volgt <A HREF="#XIV.48">XIV.48</A>
-<LI><I>Mano Zoï Amoz (Mano)</I><A NAME="ID2114"></A>, volgt <A HREF="#XIV.49">XIV.49</A>
+<LI><I>Mano Zo&iuml; Amoz (Mano)</I><A NAME="ID2114"></A>, volgt <A HREF="#XIV.49">XIV.49</A>
 </OL>
 
 
@@ -2419,7 +2419,7 @@ gedoopt (Evangelisch)<BR><B><A NAME="XIV.46"></A> XIV.46 Joppe Jacob (Joppe) PEL
 
 <BR><B><A NAME="XIV.48"></A> XIV.48 Noa Marise Lieve (Noa) PEETOOM</B><A NAME="ID1175"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 16 mei 2004 te Harderwijk
 
-<BR><B><A NAME="XIV.49"></A> XIV.49 Mano Zoï Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
+<BR><B><A NAME="XIV.49"></A> XIV.49 Mano Zo&iuml; Amoz (Mano) PEETOOM</B><A NAME="ID2114"></A> [<A HREF="#ID1025">V</A>] [<A HREF="#ID24">M</A>]. Geboren 17 februari 2006 te Harderwijk
 
 <BR><B><A NAME="XIV.50"></A> XIV.50 Marrigje Yvonne (Myrthe) de HAAN</B><A NAME="ID1139"></A> [<A HREF="#ID27">V</A>] [<A HREF="#ID1024">M</A>]. Geboren 2 januari 2003 te Den Haag
 
